--- a/src/styles/element-variables.scss
+++ b/src/styles/element-variables.scss
@@ -11,7 +11,12 @@ $--color-text-regular: #1f2d3d;
 $--border-color-light: #dfe4ed;
 $--border-color-lighter: #e6ebf5;
 $--table-border:1px solid#dfe6ec;
-
+.el-table--border th, .el-table--border td {
+  border-right: 0!important;
+}
+table thead tr th {
+  padding: 5px 0!important;
+}
 // Icon font path, required
 $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
