--- a/src/styles/element-variables.scss
+++ b/src/styles/element-variables.scss
@@ -22,3 +22,45 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
 // Apply overrided variables in Element UI
 @import '~element-ui/packages/theme-chalk/src/index';
+
+//бэйджи
+.md-square .el-badge__content, .md-square.el-badge__content{
+  border-radius: 2px;
+  height: auto;
+  font-weight: bold;
+}
+.md-green .el-badge__content{
+  background-color: #82c310;
+  border-radius: 2px;
+  height: auto;
+  font-weight: bold;
+}
+.md-gray .el-badge__content{
+  background-color: #5a5e66a6;
+  border-radius: 2px;
+  height: auto;
+  font-weight: bold;
+}
+.md-lightblue .el-badge__content{
+  background-color: #42b5da;
+  border-radius: 2px;
+  height: auto;
+  font-weight: bold;
+}
+.md-red .el-badge__content{
+  background-color: red;
+  border-radius: 2px;
+  height: auto;
+  font-weight: bold;
+}
+
+
+tbody .el-table__row:hover {
+  cursor: pointer;
+}
+
+// card header border
+.el-card__header{
+  border: none;
+  font-weight: bold;
+}
