--- a/src/styles/element-variables.scss
+++ b/src/styles/element-variables.scss
@@ -29,25 +29,25 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
   height: auto;
   font-weight: bold;
 }
-.md-green .el-badge__content{
+.md-green .el-badge__content, .md-green.el-badge__content{
   background-color: #82c310;
   border-radius: 2px;
   height: auto;
   font-weight: bold;
 }
-.md-gray .el-badge__content{
+.md-gray .el-badge__content, .md-gray.el-badge__content{
   background-color: #5a5e66a6;
   border-radius: 2px;
   height: auto;
   font-weight: bold;
 }
-.md-lightblue .el-badge__content{
+.md-lightblue .el-badge__content, .md-lightblue.el-badge__content{
   background-color: #42b5da;
   border-radius: 2px;
   height: auto;
   font-weight: bold;
 }
-.md-red .el-badge__content{
+.md-red .el-badge__content, .md-red.el-badge__content{
   background-color: red;
   border-radius: 2px;
   height: auto;
@@ -63,4 +63,12 @@ tbody .el-table__row:hover {
 .el-card__header{
   border: none;
   font-weight: bold;
+  padding: 0 10px;
+}
+.el-card__body {
+  padding: 10px 10px 30px 10px;
+}
+
+.el-dialog__body {
+  padding: 0 20px;
 }
